--- a/v4_Modelling.ipynb
+++ b/v4_Modelling.ipynb
@@ -36,8 +36,8 @@
     "sub = pd.read_csv('SampleSubmission.csv')\n",
     "\n",
     "# Add file path to dataframe\n",
-    "train['image_path'] = os.getcwd() + '/train_images_5/' + 'spec_' + train['ID']+'.png'\n",
-    "test['image_path'] = os.getcwd() + '/test_images_5/' + 'spec_' + test['ID']+'.png'"
+    "train['image_path'] = os.getcwd() + '/train_images/' + 'spec_' + train['ID']+'.png'\n",
+    "test['image_path'] = os.getcwd() + '/test_images/' + 'spec_' + test['ID']+'.png'"
    ]
   },
   {
@@ -388,38 +388,6 @@
    "metadata": {},
    "source": [
     "##### Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define custom audio model\n",
-    "class AudioModel(torch.nn.Module):\n",
-    "    def __init__(self, backbone='resnet34', \n",
-    "                 pretrained=True, fc_size=512,\n",
-    "                  out_size=40):\n",
-    "        super(AudioModel, self).__init__()\n",
-    "\n",
-    "        self.arch = getattr(models, backbone)(pretrained)\n",
-    "\n",
-    "        head = torch.nn.Conv2d(1, 64, kernel_size=(7, 7), \n",
-    "                               stride=(2, 2),\n",
-    "                               padding=(3, 3)\n",
-    "                               )\n",
-    "        head.weight = torch.nn.Parameter(self.arch.conv1.weight.sum(dim=1, keepdim=True))\n",
-    "\n",
-    "        self.arch.conv1 = head\n",
-    "        self.arch.fc = torch.nn.Linear(fc_size, out_size)\n",
-    "        torch.nn.init.xavier_normal_(self.arch.fc.weight)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.arch(x)\n",
-    "        x= F.sigmoid(x)\n",
-    "\n",
-    "        return x\n"
    ]
   },
   {
@@ -2467,20 +2435,15 @@
     "            train_dataset,\n",
     "            batch_size=CFG.batch_size,\n",
     "            shuffle=True,\n",
-    "            # num_workers=4,\n",
-    "            # pin_memory=True,\n",
     "            drop_last=True,\n",
-    "            # collate_fn=seg_dataset_collate\n",
     "        )\n",
     "\n",
     "    valid_loader = DataLoader(\n",
     "        valid_dataset,\n",
     "        batch_size=CFG.batch_size,\n",
     "        shuffle=False,\n",
-    "        # num_workers=4,\n",
-    "        # pin_memory=True,\n",
     "        drop_last=False,\n",
-    "        # collate_fn=seg_dataset_collate\n",
+    "    \n",
     "    )\n",
     "\n",
     "\n",
@@ -2511,13 +2474,10 @@
     "\n",
     "\n",
     "    for epoch in range(0, CFG.epochs):\n",
-    "        # train_loss, train_lr = train_epoch(CFG, model, train_loader, optimizer, scheduler, epoch) # myown\n",
     "        train_loss = training_fn(CFG, train_loader, model, optimizer, criterion,  epoch)\n",
     "        \n",
     "        train_loss_history.append(train_loss)\n",
-    "        # learning_rate_history.extend(train_lr)\n",
     "\n",
-    "        # val_loss = evaluate_model(CFG, model, valid_loader, epoch) # myown\n",
     "        val_loss = evaluate(CFG, valid_loader, model, criterion)\n",
     "        val_loss_history.append(val_loss)\n",
     "\n",
@@ -2554,24 +2514,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#1.3152694719940485 - MAXVITTINY-50EPOCHS\n",
-    "#1.2177959420477968  - maxvit-base 50 epochs\n",
-    "# 1.177012765417942 - maxvit-large"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2597,18 +2539,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Propietario\\miniconda3\\envs\\datascience\\lib\\site-packages\\torchvision\\transforms\\v2\\_deprecated.py:42: UserWarning: The transform `ToTensor()` is deprecated and will be removed in a future release. Instead, please use `v2.Compose([v2.ToImage(), v2.ToDtype(torch.float32, scale=True)])`.Output is equivalent up to float precision.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_transforms = v2.Compose([\n",
     "    v2.ToTensor(),\n",
@@ -2648,8 +2581,6 @@
     "    test_dataset,\n",
     "    batch_size=1,\n",
     "    shuffle=False,\n",
-    "    # num_workers=1,\n",
-    "    # pin_memory=False,\n",
     "    drop_last=False,\n",
     ")"
    ]
@@ -2809,18 +2740,12 @@
     "\n",
     "for FOLD in range(CFG.folds):\n",
     "    print(\"Inference for fold:\", FOLD)\n",
-    "    # model = AudioModel()\n",
     "    model = timm.create_model(CFG.model_name, in_chans=1, num_classes=40, pretrained=True)\n",
     "    model = model.to(CFG.device)\n",
     "    model.load_state_dict(torch.load(os.getcwd() + f\"/models/best_model_fold_{FOLD}.pth\", map_location=CFG.device))\n",
     "    model.eval()\n",
     "    preds_label, preds_probs = inference(CFG, model, test_loader)\n",
-    "    all_predictions.append(preds_probs)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    # average predictions from fold models\n",
-    "    # test_data[\"probability\"] += predictions.numpy() / len(CFG.train_folds)"
+    "    all_predictions.append(preds_probs)"
    ]
   },
   {
@@ -3603,7 +3528,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
