--- a/Audio_to_Image.ipynb
+++ b/Audio_to_Image.ipynb
@@ -540,8 +540,8 @@
         "        # convert audio to melspectogram\n",
         "        melspectogram = audio_to_melspectogram(audio_path)\n",
         "\n",
-        "        # convert melspectogram to 3-channels image\n",
-        "        np_image = spec_to_mono_then_normalise(melspectogram)\n",
+        "        # normlaise\n",
+        "        np_image = normalise_spectogram(melspectogram)\n",
         "\n",
         "        # save numpy to file (png)\n",
         "        image = Image.fromarray(np_image)\n",
